Revert "Fixed map height on mobile to show attribution"
This reverts commit 88564248073267de6385b7bee8c8ea264186a0dc.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,7 +90,10 @@ main {
 /* Mobile device styling */
 @media screen and (max-width: 576px) {
   #mapid {
+    position: fixed;
+    top: 86px;
     left: 0;
+    height: 90vh;
     width: 100vw;
   }
 }
